<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#74bc00"
    tools:context=".TodayActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp" >
    </RelativeLayout>

    <TextView
        android:id="@+id/todayActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/today"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/verses_read"
        android:layout_marginTop="0dp"
        android:minHeight="12dip"
        android:paddingLeft="10dp"
        android:paddingRight="30dp"
        android:paddingTop="0dp" />

    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/progressBar1"
        android:paddingLeft="10dp"
        android:paddingTop="2dp"
        android:text="@string/day_num"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/menuTitle"
        android:layout_below="@+id/menuTitle"
        android:layout_marginTop="10dp"
        android:background="@drawable/top_shape"
        android:paddingLeft="10dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/today_day"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#7d7d7d" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignParentRight="true"
            android:text="@string/today_date"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#7d7d7d" />
    </RelativeLayout>

    <TextView
        android:id="@+id/verses_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/todayActivity"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:focusable="false"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:text="@string/num_of_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout3"
        android:background="#ffffff"
        android:padding="15dp" >

        <TextView
            android:id="@+id/mainTitle_singl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="maintitle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#003366"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_single"
            android:layout_marginTop="164dp"
            android:text="All Week"
            android:textSize="36sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/description_single"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/mainTitle_singl"
            android:layout_below="@+id/mainTitle_singl"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingTop="0dp"
            android:text="description"
            android:textColor="#000000"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/fav"
            android:layout_alignBottom="@+id/fav"
            android:layout_alignLeft="@+id/description_single"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/share"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tipTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iconItem"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="135dp"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />

        <TextView
            android:id="@+id/bibleTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tipTitle"
            android:layout_centerHorizontal="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="2dp"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:id="@+id/fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_single"
            android:layout_marginTop="18dp"
            android:layout_toRightOf="@+id/share"
            android:button="@drawable/favourite"
            android:checked="false"
            android:paddingLeft="47dp"
            android:text="@string/favourite" />

        <ImageView
            android:id="@+id/iconItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/description_single"
            android:layout_below="@+id/share"
            android:paddingTop="50dp"
            android:src="@drawable/tip_holder" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/nav_bar_shadow"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/weeklyBtn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_left_side_line"
            android:drawableTop="@drawable/verses"
            android:paddingTop="20dp"
            android:text="@string/weeklyVersesBtnLabel"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/favouritesBtn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_left_side_line"
            android:drawableTop="@drawable/fav"
            android:paddingTop="20dp"
            android:text="@string/favouritesBtnLabel"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/aboutBtn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_left_side_line"
            android:drawableTop="@drawable/setting"
            android:paddingTop="20dp"
            android:text="@string/aboutBtnLabel"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_left_side_line"
            android:drawableTop="@drawable/exit"
            android:paddingTop="20dp"
            android:text="@string/exitLabel"
            android:textColor="#ffffff" />

    </LinearLayout>

</RelativeLayout>